<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Voyage</string>
    <string name="notification_channel">音频服务</string>
    <string name="notification_channel_description">音乐播放通知</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="about_page_open_with">打开方式：</string>
    <string name="about_page_browser">浏览器</string>
    <string name="menu_home">首页</string>
    <string name="menu_gallery">功能</string>
    <string name="hour">小时</string>
    <string name="album_name_all">All Media</string>
    <string name="button_preview">Preview</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_sure_default">Sure</string>
    <string name="button_sure">Sure</string>
    <string name="button_null">""</string>
    <string name="button_complete">Complete</string>
    <string name="folder_count">%1$s(%2$d)</string>
    <string name="picture_size">%1$s M</string>
    <string name="photo_grid_capture">Camera</string>
    <string name="empty_text">No media yet</string>
    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>
    <string name="error_over_count_of_image">You can only select up to %1$d media of image files</string>
    <string name="error_over_count_of_video">You can only select up to %1$d media of video files</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_type_conflict">Can\'t select images and videos at the same time</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_over_original_size">Can\'t select the images larger than %1$d MB</string>
    <string name="error_over_original_count">%1$d images over %2$d MB. Original will be unchecked</string>
    <string name="error_crop">Crop Failed</string>
    <string name="please_select_media_resource">Please select media resource</string>
    <string name="empty_album">album is empty</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_error_input_data_is_absent">Both input and output Uri must be specified</string>
    <string name="ucrop_mutate_exception_hint">Therefore, override color resource (ucrop_color_toolbar_widget) in your app to make it work on pre-L devices</string>
    <string name="ucrop_gif_tag">gif</string>
    <string name="error_under_quality">Under quality</string>
    <string name="error_over_quality">Over quality</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_lock_tip">请先解锁屏幕！</string>
    <string name="dkplayer_unlocked">已解锁</string>
    <string name="dkplayer_locked">已锁定</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dkplayer_retry"> 重    试 </string>
    <string name="dkplayer_continue_play">继续播放</string>
    <string name="dkplayer_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="minute">分钟</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="zen_mode_desc">帮助您远离手机，享受生活。</string>
    <string name="common_permission_hint">授权提示</string>
    <string name="common_permission_message">使用此功能需要先授予%s</string>
    <string name="common_permission_granted">授予</string>
    <string name="common_permission_denied">取消</string>
    <string name="not_downloaded">未下载</string>
    <string name="click_to_play">点击播放</string>
    <string name="merge">合并</string>
    <string name="waiting">等待中</string>
    <string name="downloading">下载中…</string>
    <string name="enter_source_file_path">请输入源文件路径</string>
    <string name="enter_origin_document">请输入原文件</string>
    <string name="enter_target_file_path">请输入目标文件路径</string>
    <string name="output_target_file">请输出目标文件</string>
    <string name="change_format">转变封装格式</string>
    <string name="download_m3u8_file">已下载M3U8文件</string>
    <string name="download_setting">下载设置</string>
    <string name="qr_code_scan">二维码扫描</string>
    <string name="normal_download">普通下载</string>
    <string name="m3u8_to_mp4">合并M3U8为MP4</string>
    <string name="pause_all_download_task">暂停所有下载任务</string>
    <string name="resume_all_download_task">恢复所有下载任务</string>
    <string name="storage_location">存储位置</string>
    <string name="cache_file_size">缓存文件大小</string>
    <string name="clear_cache">清理缓存</string>
    <string name="open_storage_directory">打开存储目录</string>
    <string name="maximum_concurrent_number">最大并发数</string>
    <string name="merge_ts_after_download">下载完成是否合并ts分片</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ignore_certificate">是否忽略证书</string>
    <string name="pause_download_on_mobile_network">移动网络下是否暂停下载</string>
    <string name="convert_progress">已经转换的进度: %s\%</string>
    <string name="download_paused_downloaded_size">下载暂停, 已下载=%s</string>
    <string name="download_completed_total_size">下载完成, 总大小=%s</string>
    <string name="download_error">下载错误</string>
    <string name="progress_speed_downloaded">进度:%s, 速度:%s, 已下载:%s</string>
    <string name="progress">进度:%s</string>
    <string name="common_permission_alert">授权提醒</string>
    <string name="common_permission_fail_hint">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_assign_hint">授权失败，请正确授予%s</string>
    <string name="common_permission_manual_fail_hint">获取权限失败，请手动授予权限</string>
    <string name="common_permission_manual_assign_fail_hint">获取权限失败，请手动授予%s</string>
    <string name="common_permission_background_location_fail_hint">获取后台定位权限失败，\n请您选择《始终允许》</string>
    <string name="common_permission_background_sensors_fail_hint">获取后台传感器权限失败，\n请您选择《始终允许》</string>
    <string name="common_permission_media_location_hint_fail">获取媒体位置权限失败\n请清除应用数据后重试</string>
    <string name="common_permission_goto_setting_page">前往授权</string>
    <string name="splash_ad_unit_id">ca-app-pub-9790396069038412/2740392299</string>
    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_wireless_devices">附近的设备权限</string>
    <string name="common_permission_microphone">麦克风权限</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_sensors_background">后台身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_media_location">读取媒体文件位置权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">存储权限</string>
    <string name="common_permission_post_notifications">发送通知权限</string>
    <string name="common_permission_image_and_video">照片和视频权限</string>
    <string name="common_permission_audio">音乐和音频权限</string>
    <string name="common_permission_manage_storage">所有文件访问权限</string>
    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">修改系统设置权限</string>
    <string name="common_permission_notification">通知权限</string>
    <string name="common_permission_notification_listener">通知栏监听权限</string>
    <string name="common_permission_task">查看使用情况权限</string>
    <string name="common_permission_alarm">查看闹钟提醒权限</string>
    <string name="common_permission_not_disturb">勿扰权限</string>
    <string name="common_permission_ignore_battery">忽略电池优化权限</string>
    <string name="common_permission_vpn">\tVPN\t权限</string>
    <string name="checker_ab_supported_supporting_text">"您的设备包含对无缝系统更新的支持，且存在 A/B 系统分区。"</string>
    <string name="checker_ab_supported_virtual_supporting_text">"您的设备包含对新版无缝系统更新的支持，且存在虚拟 A /B 系统分区。虚拟 A/B 分区可以根据需要自由地调整大小。"</string>
    <string name="checker_cpu_architecture_known_supporting_text">"您的设备使用基于 %1$s 架构的CPU。"</string>
    <string name="checker_cpu_architecture_arm32_subtitle" translatable="false">32-bit ARM</string>
    <string name="checker_cpu_architecture_arm32_binder64_subtitle" translatable="false">32-bit ARM &#8212; 64-bit Binder</string>
    <string name="checker_cpu_architecture_arm64_subtitle" translatable="false">64-bit ARM</string>
    <string name="checker_cpu_architecture_x86_subtitle" translatable="false">x86</string>
    <string name="checker_cpu_architecture_x86_64_subtitle" translatable="false">64-bit x86</string>
    <string name="other">其他功能</string>
    <string name="next">Next</string>
    <string name="update_version">版本更新</string>
    <string name="upgrade">更新</string>
    <string name="cancel">取消</string>
    <string name="menu_resources">资源库</string>
    <string name="pages">页面</string>
    <string name="check_update">检查更新</string>
    <string name="alipay">支付宝捐赠</string>
    <string name="joinGroup">加入QQ群</string>
    <string name="wepay">微信捐赠</string>
    <string name="send_files">Send Files</string>
    <string name="network_settings">Network Settings</string>
    <string name="location_settings">Location Setttings</string>
</resources>